--- a/app/src/main/res/layout/layout_item1_type1.xml
+++ b/app/src/main/res/layout/layout_item1_type1.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bg_ll"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/icon_iv"
