--- a/app/src/main/res/layout/binder_friend_photo3.xml
+++ b/app/src/main/res/layout/binder_friend_photo3.xml
@@ -7,14 +7,15 @@
 
     <ImageView
         android:id="@+id/iv_avatar"
-        android:layout_width="70dp"
-        android:layout_height="70dp" />
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <TextView
             android:id="@+id/tv_name"
