1.修改批量注册ViewBinder没有设置Adapter问题.2.ViewHolder中添加getRecyclerVIew()方法

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,12 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <Button
+        android:id="@+id/btn_basis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/basis" />
+
+    <Button
         android:id="@+id/btn_taobao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,4 +27,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/one2many" />
+
 </LinearLayout>
